--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -200,5 +200,131 @@
   "unknown": "Unknown",
   "stadium": "Stadium",
   "notSpecified": "Not specified",
-  "stadiumNameNotSpecified": "Stadium name not specified"
+  "stadiumNameNotSpecified": "Stadium name not specified",
+  "matches": "Matches",
+  "activeMatch": "Active Match",
+  "tickets": "Tickets",
+  "yourTickets": "Your Tickets",
+  "availableTickets": "Available Tickets",
+  "liveNow": "Live Now",
+  "showQrToController": "Show QR to Controller",
+  "close": "Close",
+  "buyMore": "Buy More",
+  "myTicket": "My Ticket",
+  "profile": "Profile",
+  "takePhoto": "Take Photo",
+  "chooseFromGallery": "Choose from Gallery",
+  "takeNewPhoto": "Take New Photo",
+  "chooseNewFromGallery": "Choose New from Gallery",
+  "deletePhoto": "Delete Photo",
+  "cancel": "Cancel",
+  "selectedFileEmpty": "Selected file is empty",
+  "fileNotFound": "File not found",
+  "errorAccessingCameraGallery": "Error accessing camera/gallery",
+  "photoAccessDenied": "Photo access denied. Check permissions in settings",
+  "cameraAccessDenied": "Camera access denied. Check permissions in settings",
+  "cameraConnectionError": "Camera connection error. Try restarting the app",
+  "settings": "Settings",
+  "errorSelectingImage": "Error selecting image",
+  "profilePhotoUpdated": "Profile photo updated",
+  "profilePhotoDeleted": "Profile photo deleted",
+  "errorOnLogout": "Error on logout",
+  "data": "Data",
+  "personalInformation": "Personal Information",
+  "lastName": "Last Name",
+  "firstName": "First Name",
+  "patronymicOptional": "Patronymic (optional)",
+  "email": "Email",
+  "phoneNumber": "Phone Number",
+  "iinOptional": "IIN (optional)",
+  "saveChanges": "Save Changes",
+  "profileSuccessfullyUpdated": "Profile successfully updated",
+  "security": "Security",
+  "passwordChange": "Password Change",
+  "currentPassword": "Current Password",
+  "newPassword": "New Password",
+  "repeatNewPassword": "Repeat New Password",
+  "updatePassword": "Update Password",
+  "passwordSuccessfullyUpdated": "Password successfully updated",
+  "newPasswordMustDiffer": "New password must be different from current",
+  "changePassword": "Change Password",
+  "changeEmail": "Change Email",
+  "deleteAccount": "Delete Account",
+  "oldPassword": "Old Password",
+  "enterOldPassword": "Enter old password",
+  "enterNewPassword": "Enter new password",
+  "editProfile": "Edit Profile",
+  "personalData": "Personal Data",
+  "logout": "Logout",
+  "enterCurrentPassword": "Enter current password",
+  "enterNewPasswordField": "Enter new password",
+  "repeatNewPasswordField": "Repeat new password",
+  "shop": "Shop",
+  "fields": "Fields",
+  "sections": "Sections",
+  "years": "years",
+  "schedule": "Schedule",
+  "noScheduleYet": "No schedule yet",
+  "groups": "Groups",
+  "recruitmentOpen": "Recruitment open",
+  "recruitmentClosed": "Recruitment closed",
+  "month": "month",
+  "free": "Free",
+  "minutes": "min",
+  "students": "students",
+  "errorOccurred": "An error occurred",
+  "loadingError": "Loading error",
+  "goBack": "Go back",
+  "imageNotAvailable": "Image not available",
+  "imageLoadingError": "Image loading error",
+  "addedToFavorites": "Added to favorites",
+  "removedFromFavorites": "Removed from favorites",
+  "productAddedToCart": "Product added to cart",
+  "toCart": "To cart",
+  "untitled": "Untitled",
+  "article": "Art:",
+  "forChildren": "For children",
+  "forAdults": "For adults",
+  "unisex": "Unisex",
+  "forMen": "For men",
+  "forWomen": "For women",
+  "inStock": "In stock",
+  "outOfStock": "Out of stock",
+  "variants": "Variants",
+  "price": "Price",
+  "add": "Add",
+  "register": "Register",
+  "addToCart": "Add to cart",
+  "astanaFacilities": "Astana: 256 facilities",
+  "addFacility": "Add facility",
+  "filters": "Filters",
+  "searchFreeTime": "Search free time",
+  "book": "Book",
+  "selectTime": "Select time",
+  "pay": "Pay",
+  "fieldRental": "Field Rental",
+  "searchFilters": "Search Filters",
+  "minimumThreeCharacters": "Minimum 3 characters",
+  "maximumTwoHundredFiftyFiveCharacters": "Maximum 255 characters",
+  "search": "Search",
+  "enterFieldName": "Enter field name...",
+  "selectCity": "Select city",
+  "apply": "Apply",
+  "noMoreFields": "No more fields",
+  "sectionRegistration": "Section Registration",
+  "enterSectionName": "Enter section name...",
+  "gender": "Gender",
+  "any": "Any",
+  "male": "Male",
+  "female": "Female",
+  "age": "Age",
+  "from": "From",
+  "to": "To",
+  "averagePrice": "Average Price",
+  "priceFrom": "Price from",
+  "priceTo": "Price to",
+  "noMoreSections": "No more sections",
+  "newProducts": "New Products",
+  "categories": "Categories",
+  "buy": "Buy"
 }
