--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -200,5 +200,131 @@
   "unknown": "Белгісіз",
   "stadium": "Стадион",
   "notSpecified": "Көрсетілмеген",
-  "stadiumNameNotSpecified": "Стадион атауы көрсетілмеген"
+  "stadiumNameNotSpecified": "Стадион атауы көрсетілмеген",
+  "matches": "Матчтар",
+  "activeMatch": "Белсенді матч",
+  "tickets": "Билеттер",
+  "yourTickets": "Сіздің билеттеріңіз",
+  "availableTickets": "Қолжетімді билеттер",
+  "liveNow": "Тікелей эфир",
+  "showQrToController": "QR кодын бақылаушыға көрсетіңіз",
+  "close": "Жабу",
+  "buyMore": "Тағы сатып алу",
+  "myTicket": "Менің билетім",
+  "profile": "Профиль",
+  "takePhoto": "Фото түсіру",
+  "chooseFromGallery": "Галереядан таңдау",
+  "takeNewPhoto": "Жаңа фото түсіру",
+  "chooseNewFromGallery": "Галереядан жаңасын таңдау",
+  "deletePhoto": "Фотоны жою",
+  "cancel": "Болдырмау",
+  "selectedFileEmpty": "Таңдалған файл бос",
+  "fileNotFound": "Файл табылмады",
+  "errorAccessingCameraGallery": "Камера/галерея қол жетімділік қатесі",
+  "photoAccessDenied": "Фотоға қол жетімділік жоқ. Баптауларда рұқсаттарды тексеріңіз",
+  "cameraAccessDenied": "Камераға қол жетімділік жоқ. Баптауларда рұқсаттарды тексеріңіз",
+  "cameraConnectionError": "Камера қосылу қатесі. Қосымшаны қайта іске қосыңыз",
+  "settings": "Баптаулар",
+  "errorSelectingImage": "Суретті таңдау қатесі",
+  "profilePhotoUpdated": "Профиль фотосы жаңартылды",
+  "profilePhotoDeleted": "Профиль фотосы жойылды",
+  "errorOnLogout": "Шығу кезінде қате",
+  "data": "Деректер",
+  "personalInformation": "Жеке ақпарат",
+  "lastName": "Тегі",
+  "firstName": "Аты",
+  "patronymicOptional": "Әкесінің аты (қажет емес)",
+  "email": "Email",
+  "phoneNumber": "Телефон нөмірі",
+  "iinOptional": "ЖСН (қажет емес)",
+  "saveChanges": "Өзгерістерді сақтау",
+  "profileSuccessfullyUpdated": "Профиль сәтті жаңартылды",
+  "security": "Қауіпсіздік",
+  "passwordChange": "Құпия сөзді өзгерту",
+  "currentPassword": "Ағымдағы құпия сөз",
+  "newPassword": "Жаңа құпия сөз",
+  "repeatNewPassword": "Жаңа құпия сөзді қайталаңыз",
+  "updatePassword": "Құпия сөзді жаңарту",
+  "passwordSuccessfullyUpdated": "Құпия сөз сәтті жаңартылды",
+  "newPasswordMustDiffer": "Жаңа құпия сөз ағымдағысынан ерекшеленуі тиіс",
+  "changePassword": "Құпия сөзді өзгерту",
+  "changeEmail": "Поштаны өзгерту",
+  "deleteAccount": "Тіркелгіні жою",
+  "oldPassword": "Ескі құпия сөз",
+  "enterOldPassword": "Ескі құпия сөзді енгізіңіз",
+  "enterNewPassword": "Жаңа құпия сөзді енгізіңіз",
+  "editProfile": "Профильді өңдеу",
+  "personalData": "Жеке деректер",
+  "logout": "Шығу",
+  "enterCurrentPassword": "Ағымдағы құпия сөзді енгізіңіз",
+  "enterNewPasswordField": "Жаңа құпия сөзді енгізіңіз",
+  "repeatNewPasswordField": "Жаңа құпия сөзді қайталаңыз",
+  "shop": "Дүкен",
+  "fields": "Алаңдар",
+  "sections": "Бөлімдер",
+  "years": "жас",
+  "schedule": "Кесте",
+  "noScheduleYet": "Кесте әлі жоқ",
+  "groups": "Топтар",
+  "recruitmentOpen": "Қабылдау ашық",
+  "recruitmentClosed": "Қабылдау жабық",
+  "month": "ай",
+  "free": "Тегін",
+  "minutes": "мин",
+  "students": "оқушы",
+  "errorOccurred": "Қате пайда болды",
+  "loadingError": "Жүктеу қатесі",
+  "goBack": "Кері қайту",
+  "imageNotAvailable": "Сурет қолжетімді емес",
+  "imageLoadingError": "Сурет жүктеу қатесі",
+  "addedToFavorites": "Таңдаулыларға қосылды",
+  "removedFromFavorites": "Таңдаулылардан алынды",
+  "productAddedToCart": "Өнім себетке қосылды",
+  "toCart": "Себетке",
+  "untitled": "Атаусыз",
+  "article": "Арт:",
+  "forChildren": "Балаларға арналған",
+  "forAdults": "Ересектерге арналған",
+  "unisex": "Унисекс",
+  "forMen": "Ерлерге арналған",
+  "forWomen": "Әйелдерге арналған",
+  "inStock": "Қоймада бар",
+  "outOfStock": "Қоймада жоқ",
+  "variants": "Нұсқалар",
+  "price": "Бағасы",
+  "add": "Қосу",
+  "register": "Тіркелу",
+  "addToCart": "Себетке қосу",
+  "astanaFacilities": "Астана: 256 нысан",
+  "addFacility": "Алаң қосу",
+  "filters": "Сүзгілер",
+  "searchFreeTime": "Бос уақыт іздеу",
+  "book": "Брондау",
+  "selectTime": "Уақыт таңдау",
+  "pay": "Төлеу",
+  "fieldRental": "Алаң жалдау",
+  "searchFilters": "Іздеу сүзгілері",
+  "minimumThreeCharacters": "Кемінде 3 таңба",
+  "maximumTwoHundredFiftyFiveCharacters": "Ең көбі 255 таңба",
+  "search": "Іздеу",
+  "enterFieldName": "Алаң атауын енгізіңіз...",
+  "selectCity": "Қаланы таңдаңыз",
+  "apply": "Қолдану",
+  "noMoreFields": "Басқа алаңдар жоқ",
+  "sectionRegistration": "Секцияға жазылу",
+  "enterSectionName": "Секция атауын енгізіңіз...",
+  "gender": "Жынысы",
+  "any": "Кез келген",
+  "male": "Ер",
+  "female": "Әйел",
+  "age": "Жасы",
+  "from": "Бастап",
+  "to": "Дейін",
+  "averagePrice": "Орташа баға",
+  "priceFrom": "Бағасы бастап",
+  "priceTo": "Бағасы дейін",
+  "noMoreSections": "Басқа секциялар жоқ",
+  "newProducts": "Жаңа өнімдер",
+  "categories": "Санаттар",
+  "buy": "Сатып алу"
 }
