--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -200,5 +200,131 @@
   "unknown": "Неизвестно",
   "stadium": "Стадион",
   "notSpecified": "Не указан",
-  "stadiumNameNotSpecified": "Название не указано"
+  "stadiumNameNotSpecified": "Название не указано",
+  "matches": "Матчи",
+  "activeMatch": "Активный матч",
+  "tickets": "Билеты",
+  "yourTickets": "Ваши билеты",
+  "availableTickets": "Доступные билеты",
+  "liveNow": "Прямо эфир",
+  "showQrToController": "Покажите QR Контролеру",
+  "close": "Закрыть",
+  "buyMore": "Купить еще",
+  "myTicket": "Мой билет",
+  "profile": "Профиль",
+  "takePhoto": "Сделать фото",
+  "chooseFromGallery": "Выбрать из галереи",
+  "takeNewPhoto": "Сделать новое фото",
+  "chooseNewFromGallery": "Выбрать новое из галереи",
+  "deletePhoto": "Удалить фото",
+  "cancel": "Отмена",
+  "selectedFileEmpty": "Выбранный файл пуст",
+  "fileNotFound": "Файл не найден",
+  "errorAccessingCameraGallery": "Ошибка доступа к камере/галерее",
+  "photoAccessDenied": "Доступ к фото запрещен. Проверьте разрешения в настройках",
+  "cameraAccessDenied": "Доступ к камере запрещен. Проверьте разрешения в настройках",
+  "cameraConnectionError": "Ошибка подключения к камере. Попробуйте перезапустить приложение",
+  "settings": "Настройки",
+  "errorSelectingImage": "Ошибка при выборе изображения",
+  "profilePhotoUpdated": "Фото профиля обновлено",
+  "profilePhotoDeleted": "Фото профиля удалено",
+  "errorOnLogout": "Ошибка при выходе",
+  "data": "Данные",
+  "personalInformation": "Личная информация",
+  "lastName": "Фамилия",
+  "firstName": "Имя",
+  "patronymicOptional": "Отчество (необязательно)",
+  "email": "Email",
+  "phoneNumber": "Номер телефона",
+  "iinOptional": "ИИН (необязательно)",
+  "saveChanges": "Сохранить изменения",
+  "profileSuccessfullyUpdated": "Профиль успешно обновлен",
+  "security": "Безопасность",
+  "passwordChange": "Изменение пароля",
+  "currentPassword": "Текущий пароль",
+  "newPassword": "Новый пароль",
+  "repeatNewPassword": "Повторите новый пароль",
+  "updatePassword": "Обновить пароль",
+  "passwordSuccessfullyUpdated": "Пароль успешно обновлен",
+  "newPasswordMustDiffer": "Новый пароль должен отличаться от текущего",
+  "changePassword": "Поменять пароль",
+  "changeEmail": "Поменять почту",
+  "deleteAccount": "Удалить аккаунт",
+  "oldPassword": "Старый пароль",
+  "enterOldPassword": "Введите старый пароль",
+  "enterNewPassword": "Введите новый пароль",
+  "editProfile": "Редактировать профиль",
+  "personalData": "Личные данные",
+  "logout": "Выход",
+  "enterCurrentPassword": "Введите текущий пароль",
+  "enterNewPasswordField": "Введите новый пароль",
+  "repeatNewPasswordField": "Повторите новый пароль",
+  "shop": "Магазин",
+  "fields": "Поля",
+  "sections": "Секции",
+  "years": "лет",
+  "schedule": "Расписание",
+  "noScheduleYet": "Расписания пока нет",
+  "groups": "Группы",
+  "recruitmentOpen": "Набор открыт",
+  "recruitmentClosed": "Набор закрыт",
+  "month": "мес",
+  "free": "Бесплатно",
+  "minutes": "мин",
+  "students": "учеников",
+  "errorOccurred": "Произошла ошибка",
+  "loadingError": "Ошибка загрузки",
+  "goBack": "Вернуться",
+  "imageNotAvailable": "Изображение недоступно",
+  "imageLoadingError": "Ошибка загрузки изображения",
+  "addedToFavorites": "Добавлено в избранное",
+  "removedFromFavorites": "Убрано из избранного",
+  "productAddedToCart": "Товар добавлен в корзину",
+  "toCart": "В корзину",
+  "untitled": "Без названия",
+  "article": "Арт:",
+  "forChildren": "Для детей",
+  "forAdults": "Для взрослых",
+  "unisex": "Унисекс",
+  "forMen": "Для мужчин",
+  "forWomen": "Для женщин",
+  "inStock": "В наличии",
+  "outOfStock": "Нет в наличии",
+  "variants": "Варианты",
+  "price": "Цена",
+  "add": "Добавить",
+  "register": "Записаться",
+  "addToCart": "Добавить в корзину",
+  "astanaFacilities": "Астана: 256 сооружений",
+  "addFacility": "Добавить площадку",
+  "filters": "Фильтры",
+  "searchFreeTime": "Поиск свободного времени",
+  "book": "Забронировать",
+  "selectTime": "Выберите время",
+  "pay": "Оплатить",
+  "fieldRental": "Аренда полей",
+  "searchFilters": "Фильтры поиска",
+  "minimumThreeCharacters": "Минимум 3 символа",
+  "maximumTwoHundredFiftyFiveCharacters": "Максимум 255 символов",
+  "search": "Поиск",
+  "enterFieldName": "Введите название поля...",
+  "selectCity": "Выберите город",
+  "apply": "Применить",
+  "noMoreFields": "Больше полей нет",
+  "sectionRegistration": "Запись в секцию",
+  "enterSectionName": "Введите название секции...",
+  "gender": "Пол",
+  "any": "Любой",
+  "male": "Мужской",
+  "female": "Женский",
+  "age": "Возраст",
+  "from": "От",
+  "to": "До",
+  "averagePrice": "Средняя цена",
+  "priceFrom": "Цена от",
+  "priceTo": "Цена до",
+  "noMoreSections": "Больше секций нет",
+  "newProducts": "Новые товары",
+  "categories": "Категории",
+  "buy": "Купить"
 }
