commit added translations

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -78,7 +78,7 @@
   "statistics": "Statistics",
   "lineup": "Lineup",
   "players": "Players",
-  "loadingErrorWithMessage": "Loading error",
+  "loadingErrorWithMessage": "Loading error:",
   "selectLineupTabToLoad": "Select 'Lineup' tab to load lineup",
   "selectPlayersTabToLoad": "Select 'Player Statistics' tab to load",
   "ballPossession": "Ball possession",
@@ -128,7 +128,7 @@
   "nationalTeamGames": "National Team Games",
   "allGames": "All Games",
   "clubGames": "Club Games",
-  "loadingErrorWithMessage": "Loading error",
+  "loadingErrorWithMessage": "Loading error:",
   "noUpcomingMatches": "No upcoming matches",
   "noPastMatches": "No past matches",
   "matchesWillBeDisplayed": "Matches will be displayed when available",
@@ -326,5 +326,75 @@
   "noMoreSections": "No more sections",
   "newProducts": "New Products",
   "categories": "Categories",
-  "buy": "Buy"
+  "buy": "Buy",
+  "firstLeague": "First League",
+  "activeTickets": "Active Tickets",
+  "buyTickets": "Buy Tickets",
+  "loading": "Loading...",
+  "httpError": "HTTP error",
+  "tryAgain": "Try again",
+  "repeatPayment": "Repeat Payment",
+  "loadingPayment": "Loading payment...",
+  "noActiveTicketsYet": "No active tickets yet",
+  "city": "City",
+  "event": "Event",
+  "venueNotSpecified": "Venue not specified",
+  "sport": "SPORT",
+  "venue": "Venue",
+  "dateAndTime": "Date and time",
+  "pleaseAuthorize": "Please authorize",
+  "youHaveNoOrdersYet": "You have no orders yet",
+  "orderedTicketsWillAppearHere": "Ordered tickets will appear here",
+  "orderDetails": "Order Details #",
+  "untitled": "Untitled",
+  "genre": "Genre:",
+  "duration": "Duration:",
+  "minutes": "min",
+  "unknownLocation": "Unknown location",
+  "unknownCity": "Unknown city",
+  "hall": "Hall:",
+  "unknownHall": "Unknown hall",
+  "ticket": "Ticket",
+  "row": "Row",
+  "seat": "Seat",
+  "level": "Level:",
+  "orderInformation": "Order Information",
+  "ticketCount": "Ticket count",
+  "totalCost": "Total cost",
+  "phone": "Phone",
+  "dateCreated": "Date created",
+  "cancellationReason": "Cancellation reason",
+  "cancelOrder": "Cancel order",
+  "payOrder": "Pay order",
+  "showPass": "Show pass",
+  "statusCanceled": "CANCELED",
+  "statusPaid": "PAID",
+  "statusActive": "ACTIVE",
+  "statusInactive": "INACTIVE",
+  "eventPass": "Event Pass",
+  "order": "Order #",
+  "loadingPass": "Loading pass...",
+  "passLoadingError": "Error loading pass",
+  "unknownError": "Unknown error",
+  "qrCodeUnavailable": "QR code unavailable",
+  "qrCodesNotFound": "QR codes not found",
+  "amount": "Amount",
+  "ticketsCount": "Tickets",
+  "details": "Details",
+  "selectCountryFirst": "Select country first",
+  "season": "Season:",
+  "tournamentSelected": "Tournament selected:",
+  "tournamentSaveError": "Error saving tournament",
+  "selectTournament": "Select Tournament",
+  "international": "Int.",
+  "male": "M",
+  "female": "F",
+  "tournamentLoadingError": "Error loading tournaments",
+  "retryAttempt": "Retry attempt",
+  "searchTournaments": "Search tournaments...",
+  "maleTournaments": "Male",
+  "femaleTournaments": "Female",
+  "tournamentsNotFound": "Tournaments not found",
+  "tryChangeSearchFilters": "Try changing search filters",
+  "touchScreenToSkip": "Touch screen to skip"
 }
