--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -78,7 +78,7 @@
   "statistics": "Статистика",
   "lineup": "Құрам",
   "players": "Ойыншылар",
-  "loadingErrorWithMessage": "Жүктеу қатесі",
+  "loadingErrorWithMessage": "Жүктеу қатесі:",
   "selectLineupTabToLoad": "'Құрам' қойындысын таңдаңыз",
   "selectPlayersTabToLoad": "Ойыншылар статистикасы қойындысын таңдаңыз",
   "ballPossession": "Доп володельство",
@@ -128,7 +128,7 @@
   "nationalTeamGames": "Ұлттық құрама ойындары",
   "allGames": "Барлық ойындар",
   "clubGames": "Клуб ойындары",
-  "loadingErrorWithMessage": "Жүктеу қатесі",
+  "loadingErrorWithMessage": "Жүктеу қатесі:",
   "noUpcomingMatches": "Күтілетін матчтар жоқ",
   "noPastMatches": "Өткен матчтар жоқ",
   "matchesWillBeDisplayed": "Матчтар қол жетімді болған кезде көрсетіледі",
@@ -326,5 +326,75 @@
   "noMoreSections": "Басқа секциялар жоқ",
   "newProducts": "Жаңа өнімдер",
   "categories": "Санаттар",
-  "buy": "Сатып алу"
+  "buy": "Сатып алу",
+  "firstLeague": "Бірінші лига",
+  "activeTickets": "Белсенді билеттер",
+  "buyTickets": "Билет сатып алу",
+  "loading": "Жүктелуде...",
+  "httpError": "HTTP қатесі",
+  "tryAgain": "Қайта көру",
+  "repeatPayment": "Қайталап төлеу",
+  "loadingPayment": "Төлем жүктелуде...",
+  "noActiveTicketsYet": "Әлі белсенді билеттер жоқ",
+  "city": "Қала",
+  "event": "Оқиға",
+  "venueNotSpecified": "Орын көрсетілмеген",
+  "sport": "СПОРТ",
+  "venue": "Өткізу орны",
+  "dateAndTime": "Күні және уақыты",
+  "pleaseAuthorize": "Өтінім, авторизациядан өтіңіз",
+  "youHaveNoOrdersYet": "Сізде әлі тапсырыстар жоқ",
+  "orderedTicketsWillAppearHere": "Тапсырыс берілген билеттер осы жерде көрсетіледі",
+  "orderDetails": "Тапсырыс мәліметтері #",
+  "untitled": "Атаусыз",
+  "genre": "Жанр:",
+  "duration": "Ұзақтығы:",
+  "minutes": "мин",
+  "unknownLocation": "Белгісіз орын",
+  "unknownCity": "Белгісіз қала",
+  "hall": "Зал:",
+  "unknownHall": "Белгісіз зал",
+  "ticket": "Билет",
+  "row": "Қатар",
+  "seat": "Орын",
+  "level": "Деңгей:",
+  "orderInformation": "Тапсырыс туралы ақпарат",
+  "ticketCount": "Билеттер саны",
+  "totalCost": "Жалпы құны",
+  "phone": "Телефон",
+  "dateCreated": "Ұйымдастыру күні",
+  "cancellationReason": "Болдырмау себебі",
+  "cancelOrder": "Тапсырысты болдырмау",
+  "payOrder": "Тапсырыс үшін төлеу",
+  "showPass": "Өту құжатын көрсету",
+  "statusCanceled": "БОЛДЫРМАЛМАғАН",
+  "statusPaid": "ТӨЛЕНГЕН",
+  "statusActive": "БЕЛСЕНДІ",
+  "statusInactive": "БЕЛСЕНДІ ЕМЕС",
+  "eventPass": "Оқиғаға құжат",
+  "order": "Тапсырыс #",
+  "loadingPass": "Құжат жүктелуде...",
+  "passLoadingError": "Құжатты жүктеу қатесі",
+  "unknownError": "Белгісіз қате",
+  "qrCodeUnavailable": "QR-код қол жетімді емес",
+  "qrCodesNotFound": "QR-кодтар табылмады",
+  "amount": "Сома",
+  "ticketsCount": "Билеттер",
+  "details": "Мәліметтер",
+  "selectCountryFirst": "Алдымен елді таңдаңыз",
+  "season": "Маусым:",
+  "tournamentSelected": "Турнир таңдалған:",
+  "tournamentSaveError": "Турнирді сақтау қатесі",
+  "selectTournament": "Турнир таңдаңыз",
+  "international": "Хал.",
+  "male": "Ер.",
+  "female": "Әй.",
+  "tournamentLoadingError": "Турнирлерді жүктеу қатесі",
+  "retryAttempt": "Қайта көру",
+  "searchTournaments": "Турнирлерді іздеу...",
+  "maleTournaments": "Ерлер",
+  "femaleTournaments": "Әйелдер",
+  "tournamentsNotFound": "Турнирлер табылмады",
+  "tryChangeSearchFilters": "Іздеу сүзгілерін өзгертуге тырысыңыз",
+  "touchScreenToSkip": "Өткізіп жіберу үшін экранға тегіңіз"
 }
