--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -78,7 +78,7 @@
   "statistics": "Статистика",
   "lineup": "Состав",
   "players": "Игроки",
-  "loadingErrorWithMessage": "Ошибка загрузки",
+  "loadingErrorWithMessage": "Ошибка загрузки:",
   "selectLineupTabToLoad": "Выберите вкладку 'Состав' для загрузки состава",
   "selectPlayersTabToLoad": "Выберите вкладку 'Статистика игроков' для загрузки",
   "ballPossession": "Владение мячом",
@@ -128,7 +128,7 @@
   "nationalTeamGames": "Игры сборной",
   "allGames": "Все игры",
   "clubGames": "Клубные игры",
-  "loadingErrorWithMessage": "Ошибка загрузки",
+  "loadingErrorWithMessage": "Ошибка загрузки:",
   "noUpcomingMatches": "Нет предстоящих матчей",
   "noPastMatches": "Нет прошедших матчей",
   "matchesWillBeDisplayed": "Матчи будут отображены, когда станут доступны",
@@ -326,5 +326,74 @@
   "noMoreSections": "Больше секций нет",
   "newProducts": "Новые товары",
   "categories": "Категории",
-  "buy": "Купить"
+  "buy": "Купить",
+  "firstLeague": "Первая лига",
+  "activeTickets": "Активные билеты",
+  "buyTickets": "Купить билеты",
+  "loading": "Загрузка...",
+  "httpError": "HTTP ошибка",
+  "tryAgain": "Попробовать снова",
+  "repeatPayment": "Повторная оплата",
+  "loadingPayment": "Загрузка оплаты...",
+  "noActiveTicketsYet": "Пока нет активных билетов",
+  "city": "Город",
+  "event": "Событие",
+  "venueNotSpecified": "Место не указано",
+  "sport": "СПОРТ",
+  "venue": "Место проведения",
+  "dateAndTime": "Дата и время",
+  "pleaseAuthorize": "Пожалуйста, пройдите авторизацию",
+  "youHaveNoOrdersYet": "У вас пока нет заказов",
+  "orderedTicketsWillAppearHere": "Заказанные билеты будут отображаться здесь",
+  "orderDetails": "Детали заказа #",
+  "genre": "Жанр:",
+  "duration": "Длительность:",
+  "minutes": "мин",
+  "unknownLocation": "Неизвестное место",
+  "unknownCity": "Неизвестный город",
+  "hall": "Зал:",
+  "unknownHall": "Неизвестный зал",
+  "ticket": "Билет",
+  "row": "Ряд",
+  "seat": "Место",
+  "level": "Уровень:",
+  "orderInformation": "Информация о заказе",
+  "ticketCount": "Количество билетов",
+  "totalCost": "Общая стоимость",
+  "phone": "Телефон",
+  "dateCreated": "Дата создания",
+  "cancellationReason": "Причина отмены",
+  "cancelOrder": "Отменить заказ",
+  "payOrder": "Оплатить заказ",
+  "showPass": "Показать пропуск",
+  "statusCanceled": "ОТМЕНЕН",
+  "statusPaid": "ОПЛАЧЕН",
+  "statusActive": "АКТИВЕН",
+  "statusInactive": "НЕАКТИВЕН",
+  "eventPass": "Пропуск на мероприятие",
+  "order": "Заказ #",
+  "loadingPass": "Загрузка пропуска...",
+  "passLoadingError": "Ошибка загрузки пропуска",
+  "unknownError": "Неизвестная ошибка",
+  "qrCodeUnavailable": "QR-код недоступен",
+  "qrCodesNotFound": "QR-коды не найдены",
+  "amount": "Сумма",
+  "ticketsCount": "Билетов",
+  "details": "Детали",
+  "selectCountryFirst": "Сначала выберите страну",
+  "season": "Сезон:",
+  "tournamentSelected": "Выбран турнир:",
+  "tournamentSaveError": "Ошибка сохранения турнира",
+  "selectTournament": "Выберите турнир",
+  "international": "Межд.",
+  "male": "М",
+  "female": "Ж",
+  "tournamentLoadingError": "Ошибка загрузки турниров",
+  "retryAttempt": "Повторить попытку",
+  "searchTournaments": "Поиск турниров...",
+  "maleTournaments": "Мужские",
+  "femaleTournaments": "Женские",
+  "tournamentsNotFound": "Турниры не найдены",
+  "tryChangeSearchFilters": "Попробуйте изменить фильтры поиска",
+  "touchScreenToSkip": "Коснитесь экрана, чтобы пропустить"
 }
