commit added translations

--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -9,11 +9,11 @@
   "login": "Логин",
   "enterUsername": "Пайдаланушы атын енгізіңіз",
   "incorrectFormat": "Қате пішім",
-  "enterPassword": "Күйт сөзді енгізіңіз",
+  "enterPassword": "Құпия сөзді енгізіңіз",
   "minimumThreeChars": "Кемінде 3 таңба",
   "minimumSixChars": "Кемінде 6 таңба",
-  "password": "Күйт сөз",
-  "forgotPassword": "Күйт сөзді ұмыттыңыз ба?",
+  "password": "Құпия сөз",
+  "forgotPassword": "Құпия сөзді ұмыттыңыз ба?",
   "signIn": "Кіру",
   "registration": "Тіркелу",
   "goVerification": "Растауға өту",
@@ -21,9 +21,9 @@
   "enterEmailHint": "Электронды поштаны енгізіңіз",
   "enterEmail": "Электронды поштаны енгізіңіз",
   "enterCorrectEmail": "Дұрыс электронды пошта мекенжайын енгізіңіз",
-  "passwordMinSixChars": "Күйт сөз кемінде 6 таңбаны қамтуы қажет",
-  "repeatPassword": "Күйт сөзді қайталаңыз",
-  "passwordsNotMatch": "Күйт сөздер сәйкес келмейді",
+  "passwordMinSixChars": "Құпия сөз кемінде 6 таңбаны қамтуы қажет",
+  "repeatPassword": "Құпия сөзді қайталаңыз",
+  "passwordsNotMatch": "Құпия сөздер сәйкес келмейді",
   "enterPhone": "Телефон нөмірін енгізіңіз",
   "phoneFormat": "Нөмір 7-ден басталуы және 11 цифрдан тұруы қажет (7XXXXXXXXXX)",
   "enterFirstName": "Атын енгізіңіз",
@@ -105,7 +105,7 @@
   "offsides": "Офсайдтар",
   "corners": "Көлбеу соққылар",
   "additionalStats": "Қосымша статистика",
-  "home": "Үй беті",
+  "home": "Басты бет",
   "loadingTournaments": "Турнирлер жүктелуде...",
   "pleaseWait": "Күтіңіз",
   "tournaments": "Турнирлер",
@@ -118,15 +118,15 @@
   "selectResultsTab": "'Нәтижелер' қойындысын таңдаңыз",
   "position": "№",
   "team": "Команда",
-  "matchesPlayed": "Ойындар",
-  "goalsScored": "Голдар",
-  "points": "Очколар",
+  "matchesPlayed": "О",
+  "goalsScored": "Г",
+  "points": "О",
   "latestNews": "Соңғы жаңалықтар",
-  "allNews": "Барлық жаңалықтар",
+  "allNews": "Барлығы",
   "newsNotFound": "Жаңалықтар табылмады",
   "newsLoadError": "Жаңалықтарды жүктеу қатесі",
   "nationalTeamGames": "Ұлттық құрама ойындары",
-  "allGames": "Барлық ойындар",
+  "allGames": "Барлығы",
   "clubGames": "Клуб ойындары",
   "loadingErrorWithMessage": "Жүктеу қатесі:",
   "noUpcomingMatches": "Күтілетін матчтар жоқ",
