commit added translations

--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -148,7 +148,7 @@
   "loadingError": "Жүктеу қатесі",
   "selectNationalTeam": "Құраманы таңдаңыз",
   "untitled": "Атаусыз",
-  "future": "Болашақ",
+  "future": "Алдағы",
   "past": "Өткен",
   "players": "Ойыншылар",
   "coaches": "Бапкерлер",
@@ -171,7 +171,6 @@
   "nationalityNotSpecified": "Ұлты көрсетілмеген",
   "clubMatches": "Клубтық матчтар",
   "tournaments": "Турнирлер",
-  "future": "Болашақ",
   "past": "Өткен",
   "matchesLoadingError": "Матчтарды жүктеу қатесі",
   "noUpcomingMatches": "Алдағы матчтар жоқ",
