CART + PRODUCT ORDER + BOOKING FIELD PARTY

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -379,6 +379,7 @@
   "qrCodeUnavailable": "QR code unavailable",
   "qrCodesNotFound": "QR codes not found",
   "amount": "Amount",
+  "success": "Success",
   "ticketsCount": "Tickets",
   "details": "Details",
   "selectCountryFirst": "Select country first",
@@ -401,5 +402,66 @@
   "deleteAccountWarning": "Are you sure you want to delete your account? This action cannot be undone.",
   "deleteAccountPermanently": "Delete Permanently",
   "accountDeleted": "Account successfully deleted",
-  "accountDeletionFailed": "Account deletion failed"
+  "accountDeletionFailed": "Account deletion failed",
+  "myBookings": "My Bookings",
+  "pending": "Pending",
+  "paid": "Paid",
+  "cancelled": "Cancelled",
+  "bookingCancelledSuccessfully": "Booking cancelled successfully",
+  "repeat": "Repeat",
+  "noBookings": "No bookings",
+  "bookingDetails": "Booking Details",
+  "field": "Field",
+  "date": "Date",
+  "time": "Time",
+  "total": "Total",
+  "address": "Address",
+  "cancelBooking": "Cancel booking",
+  "cancelBookingTitle": "Cancel booking?",
+  "cancelBookingConfirmation": "Are you sure you want to cancel this booking? This action cannot be undone.",
+  "no": "No",
+  "yesCancel": "Yes, cancel",
+  "notSpecified": "Not specified",
+  "pleaseLogin": "Please log in",
+  "addedToCart": "Added to cart",
+  "selectQuantity": "Select quantity",
+  "confirm": "Confirm",
+  "myOrders": "My Orders",
+  "viewPurchaseHistory": "View purchase history",
+  "viewMyBookings": "View my bookings",
+  "authorizationRequired": "Authorization required",
+  "loginFirstToBook": "Please log in first to make a booking",
+  "bookingRequestCreated": "Booking request created",
+  "cartCleared": "Cart cleared",
+  "cartEmpty": "Cart is empty",
+  "addItemsToCheckout": "Add items to checkout",
+  "clearCartQuestion": "Clear cart?",
+  "allItemsWillBeRemoved": "All items will be removed from cart",
+  "clear": "Clear",
+  "product": "Product",
+  "totalToPay": "Total to pay:",
+  "proceedToPayment": "Proceed to payment",
+  "awaitingPayment": "Awaiting",
+  "cancelled": "Cancelled",
+  "loadingError": "Loading error",
+  "noOrdersYet": "No orders yet",
+  "placeFirstOrderInShop": "Place your first order in the shop",
+  "order": "Order",
+  "paidOn": "Paid",
+  "payBefore": "Pay before",
+  "details": "Details",
+  "unknown": "Unknown",
+  "cancelOrder": "Cancel order",
+  "cancelOrderConfirmation": "Are you sure you want to cancel this order? Funds will be refunded to your account after admin confirmation.",
+  "deleteOrder": "Delete order",
+  "deleteOrderConfirmation": "Are you sure you want to delete this order? This action cannot be undone.",
+  "delete": "Delete",
+  "orderDetails": "Order details #",
+  "orderDataNotAvailable": "Order data not available",
+  "itemsInOrder": "Items in order",
+  "noItemsInOrder": "No items in order",
+  "createdDate": "Created date",
+  "paymentDate": "Payment date",
+  "quantity": "Qty",
+  "statusHistory": "Status history"
 }
