--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -378,6 +378,7 @@
   "qrCodeUnavailable": "QR-код қол жетімді емес",
   "qrCodesNotFound": "QR-кодтар табылмады",
   "amount": "Сома",
+  "success": "Сәтті орындалды",
   "ticketsCount": "Билеттер",
   "details": "Мәліметтер",
   "selectCountryFirst": "Алдымен елді таңдаңыз",
@@ -400,5 +401,66 @@
   "deleteAccountWarning": "Сіз өз аккаунтыңызды жойғыңыз келе ме? Бұл әрекетті кері қайтару мүмкін емес.",
   "deleteAccountPermanently": "Мәңгілікке жою",
   "accountDeleted": "Аккаунт сәтті жойылды",
-  "accountDeletionFailed": "Аккаунтты жою қатесі"
+  "accountDeletionFailed": "Аккаунтты жою қатесі",
+  "myBookings": "Менің брондарым",
+  "pending": "Күтуде",
+  "paid": "Төленді",
+  "cancelled": "Болдырылмады",
+  "bookingCancelledSuccessfully": "Бронь сәтті болдырылмады",
+  "repeat": "Қайталау",
+  "noBookings": "Брондар жоқ",
+  "bookingDetails": "Бронь мәліметтері",
+  "field": "Алаң",
+  "date": "Күн",
+  "time": "Уақыт",
+  "total": "Сомма",
+  "address": "Мекен-жай",
+  "cancelBooking": "Брондауды болдырмау",
+  "cancelBookingTitle": "Брондауды болдырмау?",
+  "cancelBookingConfirmation": "Сіз бұл брондауды болдырмағыңыз келе ме? Бұл әрекетті кері қайтару мүмкін емес.",
+  "no": "Жоқ",
+  "yesCancel": "Иә, болдырмау",
+  "notSpecified": "Көрсетілмеген",
+  "pleaseLogin": "Кіруді орындаңыз",
+  "addedToCart": "Себетке қосылды",
+  "selectQuantity": "Санын таңдаңыз",
+  "confirm": "Растау",
+  "myOrders": "Менің тапсырыстарым",
+  "viewPurchaseHistory": "Сатып алу тарихын қарау",
+  "viewMyBookings": "Менің брондауларымды қарау",
+  "authorizationRequired": "Авторизация қажет",
+  "loginFirstToBook": "Брондау үшін алдымен аккаунтқа кіріңіз",
+  "bookingRequestCreated": "Брондау сұрауы жасалды",
+  "cartCleared": "Себет тазартылды",
+  "cartEmpty": "Себет бос",
+  "addItemsToCheckout": "Тапсырысты рәсімдеу үшін тауарларды қосыңыз",
+  "clearCartQuestion": "Себетті тазарту?",
+  "allItemsWillBeRemoved": "Барлық тауарлар себеттен жойылады",
+  "clear": "Тазарту",
+  "product": "Тауар",
+  "totalToPay": "Барлығы төлеуге:",
+  "proceedToPayment": "Төлемге өту",
+  "awaitingPayment": "Күтуде",
+  "cancelled": "Болдырылмаған",
+  "loadingError": "Жүктеу қатесі",
+  "noOrdersYet": "Әзірге тапсырыстар жоқ",
+  "placeFirstOrderInShop": "Дүкенде бірінші тапсырысты рәсімдеңіз",
+  "order": "Тапсырыс",
+  "paidOn": "Төленді",
+  "payBefore": "Төлеу мерзімі",
+  "details": "Толығырақ",
+  "unknown": "Белгісіз",
+  "cancelOrder": "Тапсырысты болдырмау",
+  "cancelOrderConfirmation": "Сіз бұл тапсырысты болдырмағыңыз келе ме? Әкімшілік растағаннан кейін қаражат сіздің шотыңызға қайтарылады.",
+  "deleteOrder": "Тапсырысты жою",
+  "deleteOrderConfirmation": "Сіз бұл тапсырысты жойғыңыз келе ме? Бұл әрекетті кері қайтару мүмкін емес.",
+  "delete": "Жою",
+  "orderDetails": "Тапсырыс мәліметтері #",
+  "orderDataNotAvailable": "Тапсырыс деректері қолжетімді емес",
+  "itemsInOrder": "Тапсырыстағы тауарлар",
+  "noItemsInOrder": "Тапсырыста тауарлар жоқ",
+  "createdDate": "Жасалған күні",
+  "paymentDate": "Төлем күні",
+  "quantity": "Саны",
+  "statusHistory": "Күй тарихы"
 }
