--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -378,6 +378,7 @@
   "qrCodeUnavailable": "QR-код недоступен",
   "qrCodesNotFound": "QR-коды не найдены",
   "amount": "Сумма",
+  "success": "Выполнено успешно",
   "ticketsCount": "Билетов",
   "details": "Детали",
   "selectCountryFirst": "Сначала выберите страну",
@@ -400,5 +401,66 @@
   "deleteAccountWarning": "Вы уверены, что хотите удалить свой аккаунт? Это действие нельзя отменить.",
   "deleteAccountPermanently": "Удалить навсегда",
   "accountDeleted": "Аккаунт успешно удален",
-  "accountDeletionFailed": "Ошибка удаления аккаунта"
+  "accountDeletionFailed": "Ошибка удаления аккаунта",
+  "myBookings": "Мои брони",
+  "pending": "Ожидает",
+  "paid": "Оплачено",
+  "cancelled": "Отменено",
+  "bookingCancelledSuccessfully": "Бронь успешно отменена",
+  "repeat": "Повторить",
+  "noBookings": "Нет броней",
+  "bookingDetails": "Детали брони",
+  "field": "Поле",
+  "date": "Дата",
+  "time": "Время",
+  "total": "Сумма",
+  "address": "Адрес",
+  "cancelBooking": "Отменить бронь",
+  "cancelBookingTitle": "Отменить бронь?",
+  "cancelBookingConfirmation": "Вы уверены, что хотите отменить эту бронь? Это действие нельзя отменить.",
+  "no": "Нет",
+  "yesCancel": "Да, отменить",
+  "notSpecified": "Не указано",
+  "pleaseLogin": "Выполните вход",
+  "addedToCart": "Добавлено в корзину",
+  "selectQuantity": "Выберите количество",
+  "confirm": "Подтвердить",
+  "myOrders": "Мои заказы",
+  "viewPurchaseHistory": "Посмотреть историю покупок",
+  "viewMyBookings": "Посмотреть мои бронирования",
+  "authorizationRequired": "Требуется авторизация",
+  "loginFirstToBook": "Сначала войдите в аккаунт для бронирования",
+  "bookingRequestCreated": "Запрос на бронирование создан",
+  "cartCleared": "Корзина очищена",
+  "cartEmpty": "Корзина пуста",
+  "addItemsToCheckout": "Добавьте товары для оформления заказа",
+  "clearCartQuestion": "Очистить корзину?",
+  "allItemsWillBeRemoved": "Все товары будут удалены из корзины",
+  "clear": "Очистить",
+  "product": "Товар",
+  "totalToPay": "Итого к оплате:",
+  "proceedToPayment": "Перейти к оплате",
+  "awaitingPayment": "Ожидают",
+  "cancelled": "Отмененные",
+  "loadingError": "Ошибка загрузки",
+  "noOrdersYet": "Заказов пока нет",
+  "placeFirstOrderInShop": "Оформите первый заказ в магазине",
+  "order": "Заказ",
+  "paidOn": "Оплачено",
+  "payBefore": "Оплатить до",
+  "details": "Подробнее",
+  "unknown": "Неизвестно",
+  "cancelOrder": "Отмена заказа",
+  "cancelOrderConfirmation": "Вы уверены, что хотите отменить этот заказ? Средства будут возвращены на ваш счет после подтверждения администрацией.",
+  "deleteOrder": "Удаление заказа",
+  "deleteOrderConfirmation": "Вы уверены, что хотите удалить этот заказ? Это действие нельзя отменить.",
+  "delete": "Удалить",
+  "orderDetails": "Детали заказа #",
+  "orderDataNotAvailable": "Данные заказа отсутствуют",
+  "itemsInOrder": "Товары в заказе",
+  "noItemsInOrder": "Нет товаров в заказе",
+  "createdDate": "Дата создания",
+  "paymentDate": "Дата оплаты",
+  "quantity": "Кол-во",
+  "statusHistory": "История статусов"
 }
